--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,7 +10,7 @@ body {
     background: #fafafa;
     color: #333;
     overflow-x: hidden;
-    padding-top: 60px; /* Prevents content from being hidden behind navigation */
+    /*padding-top: 60px;*/
 }
 
 /* Navigation */
@@ -146,7 +146,7 @@ p {
     padding: 20px 30px;
     background-color: #f1f1f1;
     border-radius: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
