--- a/assets/styles.css
+++ b/assets/styles.css
@@ -143,15 +143,18 @@ p {
 
 /* Contact Section */
 .contact-info {
-    padding: 20px 20px;
+    padding: 20px;
     background-color: #f1f1f1;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 10px; /* Reduce if needed */
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
     text-align: left;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
+
 
 .contact-link {
     color: #75975e;
