--- a/assets/styles.css
+++ b/assets/styles.css
@@ -152,7 +152,7 @@ p {
     margin-right: auto;
     text-align: left;
     margin-bottom: 0;
-    padding-bottom: 0;
+    padding-bottom: 20px;
 }
 
 .contact-info p {
