--- a/assets/styles.css
+++ b/assets/styles.css
@@ -151,7 +151,7 @@ p {
     margin-left: auto;
     margin-right: auto;
     text-align: left;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     padding-bottom: 20px;
 }
 
