Attempting to fix the image quality

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,13 +21,11 @@ body {
     margin-bottom: 20px;
 }
 
-.smooth {
+.profile-img {
     image-rendering: smooth;
-  }
-  
-  .high-quality {
     image-rendering: high-quality;
   }
+
 
 .navigation a {
     text-decoration: none;
