changing the hightligher color

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -258,9 +258,6 @@ p {
         font-size: 1rem;
         padding: 0 20px;
     }
-    .about-text highlight{
-        color: #75975e; 
-    }
 }
 
 /* Hide Scrollbar */
@@ -273,3 +270,7 @@ p {
     background: transparent;
 }
 
+.highlight {
+    color: #75975e;
+    font-weight: bold;
+}
