--- a/assets/styles.css
+++ b/assets/styles.css
@@ -205,6 +205,11 @@ p {
     animation: fadeIn 1s forwards ease-in-out;
 }
 
+.project-card img{
+    width: 220px;
+    height: 220px;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -225,6 +230,11 @@ p {
 
     .welcome {
         font-size: 3rem;
+    }
+
+    .project-card img{
+        width: 180px;
+        height: 180px;
     }
 
     .profile-img {
