--- a/assets/styles.css
+++ b/assets/styles.css
@@ -131,10 +131,9 @@ p {
 }
 
 .project-card img {
+    width: 100%;
     border-radius: 10px;
     margin-bottom: 15px;
-    width: 338px;
-    height: 220px;
 }
 
 .project-card h3 {
@@ -229,7 +228,7 @@ p {
     }
 
     .project-card img{
-        width: 250px;
+        width: 100%;
         height: 180px;
     }
 
