--- a/assets/styles.css
+++ b/assets/styles.css
@@ -132,10 +132,15 @@ p {
 
 .project-card img {
     width: 100%;
-    height: 220 px;
+    max-width: 150px; 
+    height: auto;
     border-radius: 10px;
     margin-bottom: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 .project-card h3 {
     font-size: 1.5rem;
